--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -145,4 +145,13 @@
   <data name="loading" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loading.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="blacklist_zoom_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\blacklist_zoom_128.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="foreign_language_config_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\foreign_language_config_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="presentation_a_config_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\presentation_a_config_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
